# polyquad

./: .gitignore  CITATION.cff  README.md  pyproject.toml
demo/: bunny.mat  example.py  example_2d.py  icosphere.mat  spheres.mat  tripod.mat
src/: test.py
src/polyquad/: __init__.py  _antonietti.py  _main.py  _mapping.py  _moment_matching.py  _moment_matching_2d.py  _utils.py
